--- a/TaketoChen2003/Taketo_Chen_CS2016/CSS/mystyle.css
+++ b/TaketoChen2003/Taketo_Chen_CS2016/CSS/mystyle.css
@@ -1,10 +1,9 @@
-<style>
 		h1 {
 		font-weight: bold;
 		text-align: center;
 		background-color: #D2E810;
 		}	
-		h3 {
+		.bh3 {
 		color: blue;
 		font-family: sans-serif;
 		position: absolute;
@@ -34,5 +33,3 @@
 		#FF {
 		font-family: Ravi Prakash, cursive;
 		text-align: right;
-		}
-	</style>
